# Velox-MPC

./: .gitignore  Cargo.toml  LICENSE  README.md  mpc.code-workspace  todo
benchmark/: .committee.json  README.md  cleanup.sh  config  fabfile.py  run_three_times.sh  script.sh  settings-lan.json  settings-wan.json  settings.json
benchmark/benchmark/: commands.py  config.py  instance.py  remote.py  utils.py
benchmark/inputs/: inp_gen.py
benchmark/logs/: compile_results.py
config/: Cargo.toml
data/ht/: vandermonde_inverse-100.json  vandermonde_inverse-103.json  vandermonde_inverse-109.json
data/lt/: vandermonde_inverse-106.json  vandermonde_inverse-112.json
node/: Cargo.toml  README.md
node/src/: cli.yml  lib.rs  main.rs  syncer.rs
protocol/: Cargo.toml
protocol/acss_ab/: Cargo.toml
protocol/acss_ab/src/: context.rs  msg.rs
protocol/acss_ab/src/protocol/: acss_state.rs  avid.rs  avss.rs  ctrbc.rs  init.rs  mod.rs  ra.rs
protocol/avid/: Cargo.toml
protocol/avid/src/: context.rs
protocol/avid/src/handlers/: mod.rs
protocol/avid/src/protocol/: deliver.rs  echo.rs  init.rs  ready.rs
protocol/avid_ab/: Cargo.toml
protocol/avid_ab/src/protocol/: init.rs  ready.rs
protocol/mpc/: Cargo.toml
protocol/mpc/src/: context.rs  input.rs  lib.rs  msg.rs  process_msg.rs
protocol/mpc/src/handlers/: mod.rs
protocol/mpc/src/protocol/: common_coin.rs  compress_tup.rs  ex_compr_state.rs  mod.rs  mult_state.rs  online_phase.rs  rand_sh.rs  rand_state.rs  verf_state.rs  weak_mult.rs
protocol/sh2t/: Cargo.toml
protocol/sh2t/src/: context.rs  lib.rs
protocol/sh2t/src/protocol/: avid.rs  ctrbc.rs  init.rs  mod.rs  ra.rs  sh2t_state.rs
protocol/src/: lib.rs  poly.rs  types.rs
scripts/: test.sh
testdata/inputs/: inp_gen.py
(+21 files in other folders)
