[package]
name = "config"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2", features = ["yaml"]}
config = { package = "config", git = "https://github.com/akhilsb/Secure-Distributed-Computing-Protocols.git"}
types = { package = "types", git = "https://github.com/akhilsb/Secure-Distributed-Computing-Protocols.git"}
crypto = { package = "crypto", git = "https://github.com/akhilsb/Secure-Distributed-Computing-Protocols.git"}
util = { package = "util", git = "https://github.com/akhilsb/Secure-Distributed-Computing-Protocols.git"}
rustls = "*"
fnv = "1"
rand = "0.6"